fix: overflow shopping cart

--- a/frontend/src/carrito/shoppingCart.css
+++ b/frontend/src/carrito/shoppingCart.css
@@ -1,5 +1,6 @@
 .shoppingCart{
     width: 35vw;
+    max-height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
